--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,14 +10,25 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "allowJs": true,
-    "lib": ["esnext", "dom"],
+    "lib": [
+      "esnext",
+      "dom"
+    ],
     "types": [
       "vite/client",
       "vite-plugin-vue-component-preview/client"
     ]
   },
   "vueCompilerOptions": {
-    "plugins": ["vite-plugin-vue-component-preview/tooling"]
+    "experimentalResolveStyleCssClasses": "always",
+    "plugins": [
+      "vite-plugin-vue-component-preview/tooling"
+    ]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue"
+  ]
 }
