--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^2.7.16"
+    "vue": "latest"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "latest",
