--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "vue.server.hybridMode": true,
-  "vue.autoInsert.dotValue": true
+  "vue.autoInsert.dotValue": true,
+  "vue.codeLens.enabled": true
 }
