--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-  "vue.server.hybridMode": true,
+  // "vue.server.hybridMode": true,
+  "vue.server.hybridMode": false,
   "vue.autoInsert.dotValue": true,
   "vue.codeLens.enabled": true
 }
