--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,11 @@
     "experimentalResolveStyleCssClasses": "always",
     "plugins": ["vite-plugin-vue-component-preview/tooling"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "src/**/*.js"
+  ]
 }
